大三下/編譯系統/homework/hw2/y.output
Rules useless in parser due to conflicts

   33 DeclarationStmt: LET ID ':' Type


State 39 conflicts: 2 shift/reduce
State 66 conflicts: 2 shift/reduce
State 67 conflicts: 2 shift/reduce
State 78 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 183 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: FunctionDeclStmt
    5                | NEWLINE

    6 $@1: %empty

    7 $@2: %empty

    8 FunctionDeclStmt: FuncOpen '(' $@1 ParameterList ')' ARROW Type $@2 FuncBlock

    9 $@3: %empty

   10 FunctionDeclStmt: FuncOpen '(' ')' $@3 FuncBlock

   11 FuncOpen: FUNC ID

   12 ParameterList: ParameterList ',' ID ':' Type
   13              | ID ':' Type

   14 FuncBlock: '{' NEWLINE StatementList '}'

   15 StatementList: Statement
   16              | Statement StatementList

   17 Statement: Block NEWLINE
   18          | DeclarationStmt ';' NEWLINE
   19          | ExpressionStmt
   20          | AssignmentStmt ';' NEWLINE
   21          | IFStmt
   22          | PrintStmt ';' NEWLINE
   23          | WhileStmt NEWLINE
   24          | ForStmt NEWLINE
   25          | CallFunction NEWLINE
   26          | NEWLINE

   27 CallFunction: ID '(' ')' ';'

   28 Block: StartBlock RETURN Literal ';' NEWLINE '}'
   29      | StartBlock StatementList '}'
   30      | StartBlock BREAK Literal ';' NEWLINE '}'

   31 $@4: %empty

   32 StartBlock: '{' $@4 NEWLINE

   33 DeclarationStmt: LET ID ':' Type
   34                | LET MUT ID ':' Type
   35                | LET ID ':' Type '=' StatementList
   36                | LET MUT ID ':' Type '=' ExpressionStmt
   37                | LET ID ':' DeclareArrayStmt '=' ExpressionStmt
   38                | LET MUT ID '=' ExpressionStmt
   39                | LET ID '=' Literal
   40                | LET ID ':' Type '=' LoopStmt

   41 AssignmentStmt: ID assign_op ExpressionStmt

   42 IFStmt: IFOpen NEWLINE
   43       | IFOpen NEWLINE ELSE Block
   44       | IFOpen ELSE Block

   45 IFOpen: IF ExpressionStmt Block

   46 PrintStmt: PRINT '(' NEWLINE ExpressionStmt NEWLINE ')'
   47          | PRINT '(' ExpressionStmt ')'
   48          | PRINTLN '(' ExpressionStmt ')'

   49 WhileStmt: WHILE ExpressionStmt Block

   50 $@5: %empty

   51 $@6: %empty

   52 ForStmt: FOR ID IN ID $@5 StartBlock $@6 StatementList '}'

   53 LoopStmt: LOOP Block

   54 DeclareArrayStmt: '[' DeclareArrayStmt ']'
   55                 | Type ';' Literal

   56 ExpressionStmt: LogicalORExpr

   57 LogicalORExpr: LogicalANDExpr LOR LogicalANDExpr
   58              | LogicalANDExpr

   59 LogicalANDExpr: ComparisonExpr LAND ComparisonExpr
   60               | ComparisonExpr

   61 ComparisonExpr: AdditionExpr cmp_op AdditionExpr
   62               | AdditionExpr

   63 AdditionExpr: MultiplicationExpr add_op MultiplicationExpr
   64             | AdditionExpr add_op MultiplicationExpr
   65             | MultiplicationExpr

   66 MultiplicationExpr: UnaryExpr mul_op UnaryExpr
   67                   | UnaryExpr shift_op UnaryExpr
   68                   | UnaryExpr

   69 UnaryExpr: unary_op UnaryExpr
   70          | ArrayExpr
   71          | Operand

   72 ArrayExpr: Literal ',' ArrayExpr
   73          | '[' Literal ',' ArrayExpr
   74          | Literal ']'

   75 $@7: %empty

   76 ArrayExpr: '&' ID $@7 '[' DotExpr ']'

   77 $@8: %empty

   78 DotExpr: DOTDOT $@8 Literal
   79        | DOtOpen

   80 $@9: %empty

   81 DotExpr: DOtOpen $@9 Literal

   82 DOtOpen: Literal DOTDOT

   83 Operand: Literal

   84 $@10: %empty

   85 Operand: Literal AS $@10 Type
   86        | ID
   87        | '(' ExpressionStmt ')'
   88        | ID '[' INT_LIT ']'

   89 $@11: %empty

   90 Operand: ID AS $@11 Type
   91        | ID '(' ID ',' ID ')'

   92 Literal: INT_LIT
   93        | FLOAT_LIT
   94        | '"' STRING_LIT '"'
   95        | '"' '"'
   96        | TRUE
   97        | FALSE

   98 assign_op: '='
   99          | ADD_ASSIGN
  100          | SUB_ASSIGN
  101          | MUL_ASSIGN
  102          | DIV_ASSIGN
  103          | REM_ASSIGN

  104 cmp_op: EQL
  105       | NEQ
  106       | '<'
  107       | LEQ
  108       | '>'
  109       | GEQ

  110 add_op: '+'
  111       | '-'

  112 mul_op: '*'
  113       | '/'
  114       | '%'

  115 shift_op: LSHIFT
  116         | RSHIFT

  117 unary_op: '+'
  118         | '-'
  119         | '!'

  120 Type: INT
  121     | FLOAT
  122     | '&' STR
  123     | BOOL


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 119
    '"' (34) 94 95
    '%' (37) 114
    '&' (38) 76 122
    '(' (40) 8 10 27 46 47 48 87 91
    ')' (41) 8 10 27 46 47 48 87 91
    '*' (42) 112
    '+' (43) 110 117
    ',' (44) 12 72 73 91
    '-' (45) 111 118
    '/' (47) 113
    ':' (58) 12 13 33 34 35 36 37 40
    ';' (59) 18 20 22 27 28 30 55
    '<' (60) 106
    '=' (61) 35 36 37 38 39 40 98
    '>' (62) 108
    '[' (91) 54 73 76 88
    ']' (93) 54 74 76 88
    '{' (123) 14 32
    '}' (125) 14 28 29 30 52
    error (256)
    LET (258) 33 34 35 36 37 38 39 40
    MUT (259) 34 36 38
    NEWLINE (260) 5 14 17 18 20 22 23 24 25 26 28 30 32 42 43 46
    INT (261) 120
    FLOAT (262) 121
    BOOL (263) 123
    STR (264) 122
    TRUE (265) 96
    FALSE (266) 97
    GEQ (267) 109
    LEQ (268) 107
    EQL (269) 104
    NEQ (270) 105
    LOR (271) 57
    LAND (272) 59
    ADD_ASSIGN (273) 99
    SUB_ASSIGN (274) 100
    MUL_ASSIGN (275) 101
    DIV_ASSIGN (276) 102
    REM_ASSIGN (277) 103
    IF (278) 45
    ELSE (279) 43 44
    FOR (280) 52
    WHILE (281) 49
    LOOP (282) 53
    PRINT (283) 46 47
    PRINTLN (284) 48
    FUNC (285) 11
    RETURN (286) 28
    BREAK (287) 30
    ID (288) 11 12 13 27 33 34 35 36 37 38 39 40 41 52 76 86 88 90 91
    ARROW (289) 8
    AS (290) 85 90
    IN (291) 52
    DOTDOT (292) 78 82
    RSHIFT (293) 116
    LSHIFT (294) 115
    INT_LIT <i_val> (295) 88 92
    FLOAT_LIT <f_val> (296) 93
    STRING_LIT <s_val> (297) 94


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    Program (64)
        on left: 1
        on right: 0
    GlobalStatementList (65)
        on left: 2 3
        on right: 1 2
    GlobalStatement (66)
        on left: 4 5
        on right: 2 3
    FunctionDeclStmt (67)
        on left: 8 10
        on right: 4
    $@1 (68)
        on left: 6
        on right: 8
    $@2 (69)
        on left: 7
        on right: 8
    $@3 (70)
        on left: 9
        on right: 10
    FuncOpen <s_val> (71)
        on left: 11
        on right: 8 10
    ParameterList (72)
        on left: 12 13
        on right: 8 12
    FuncBlock (73)
        on left: 14
        on right: 8 10
    StatementList (74)
        on left: 15 16
        on right: 14 16 29 35 52
    Statement (75)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 15 16
    CallFunction (76)
        on left: 27
        on right: 25
    Block (77)
        on left: 28 29 30
        on right: 17 43 44 45 49 53
    StartBlock (78)
        on left: 32
        on right: 28 29 30 52
    $@4 (79)
        on left: 31
        on right: 32
    DeclarationStmt (80)
        on left: 33 34 35 36 37 38 39 40
        on right: 18
    AssignmentStmt (81)
        on left: 41
        on right: 20
    IFStmt (82)
        on left: 42 43 44
        on right: 21
    IFOpen (83)
        on left: 45
        on right: 42 43 44
    PrintStmt (84)
        on left: 46 47 48
        on right: 22
    WhileStmt (85)
        on left: 49
        on right: 23
    ForStmt (86)
        on left: 52
        on right: 24
    $@5 (87)
        on left: 50
        on right: 52
    $@6 (88)
        on left: 51
        on right: 52
    LoopStmt (89)
        on left: 53
        on right: 40
    DeclareArrayStmt (90)
        on left: 54 55
        on right: 37 54
    ExpressionStmt <s_val> (91)
        on left: 56
        on right: 19 36 37 38 41 45 46 47 48 49 87
    LogicalORExpr <s_val> (92)
        on left: 57 58
        on right: 56
    LogicalANDExpr <s_val> (93)
        on left: 59 60
        on right: 57 58
    ComparisonExpr <s_val> (94)
        on left: 61 62
        on right: 59 60
    AdditionExpr <s_val> (95)
        on left: 63 64 65
        on right: 61 62 64
    MultiplicationExpr <s_val> (96)
        on left: 66 67 68
        on right: 63 64 65
    UnaryExpr <s_val> (97)
        on left: 69 70 71
        on right: 66 67 68 69
    ArrayExpr <s_val> (98)
        on left: 72 73 74 76
        on right: 70 72 73
    $@7 (99)
        on left: 75
        on right: 76
    DotExpr (100)
        on left: 78 79 81
        on right: 76
    $@8 (101)
        on left: 77
        on right: 78
    $@9 (102)
        on left: 80
        on right: 81
    DOtOpen (103)
        on left: 82
        on right: 79 81
    Operand <s_val> (104)
        on left: 83 85 86 87 88 90 91
        on right: 71
    $@10 (105)
        on left: 84
        on right: 85
    $@11 (106)
        on left: 89
        on right: 90
    Literal <s_val> (107)
        on left: 92 93 94 95 96 97
        on right: 28 30 39 55 72 73 74 78 81 82 83 85
    assign_op <s_val> (108)
        on left: 98 99 100 101 102 103
        on right: 41
    cmp_op <s_val> (109)
        on left: 104 105 106 107 108 109
        on right: 61
    add_op <s_val> (110)
        on left: 110 111
        on right: 63 64
    mul_op <s_val> (111)
        on left: 112 113 114
        on right: 66
    shift_op <s_val> (112)
        on left: 115 116
        on right: 67
    unary_op <s_val> (113)
        on left: 117 118 119
        on right: 69
    Type <s_val> (114)
        on left: 120 121 122 123
        on right: 8 12 13 33 34 35 36 40 55 85 90


State 0

    0 $accept: . Program $end

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    Program              go to state 3
    GlobalStatementList  go to state 4
    GlobalStatement      go to state 5
    FunctionDeclStmt     go to state 6
    FuncOpen             go to state 7


State 1

    5 GlobalStatement: NEWLINE .

    $default  reduce using rule 5 (GlobalStatement)


State 2

   11 FuncOpen: FUNC . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: GlobalStatementList .
    2 GlobalStatementList: GlobalStatementList . GlobalStatement

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 10
    FunctionDeclStmt  go to state 6
    FuncOpen          go to state 7


State 5

    3 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 6

    4 GlobalStatement: FunctionDeclStmt .

    $default  reduce using rule 4 (GlobalStatement)


State 7

    8 FunctionDeclStmt: FuncOpen . '(' $@1 ParameterList ')' ARROW Type $@2 FuncBlock
   10                 | FuncOpen . '(' ')' $@3 FuncBlock

    '('  shift, and go to state 11


State 8

   11 FuncOpen: FUNC ID .

    $default  reduce using rule 11 (FuncOpen)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 2 (GlobalStatementList)


State 11

    8 FunctionDeclStmt: FuncOpen '(' . $@1 ParameterList ')' ARROW Type $@2 FuncBlock
   10                 | FuncOpen '(' . ')' $@3 FuncBlock

    ')'  shift, and go to state 12

    $default  reduce using rule 6 ($@1)

    $@1  go to state 13


State 12

   10 FunctionDeclStmt: FuncOpen '(' ')' . $@3 FuncBlock

    $default  reduce using rule 9 ($@3)

    $@3  go to state 14


State 13

    8 FunctionDeclStmt: FuncOpen '(' $@1 . ParameterList ')' ARROW Type $@2 FuncBlock

    ID  shift, and go to state 15

    ParameterList  go to state 16


State 14

   10 FunctionDeclStmt: FuncOpen '(' ')' $@3 . FuncBlock

    '{'  shift, and go to state 17

    FuncBlock  go to state 18


State 15

   13 ParameterList: ID . ':' Type

    ':'  shift, and go to state 19


State 16

    8 FunctionDeclStmt: FuncOpen '(' $@1 ParameterList . ')' ARROW Type $@2 FuncBlock
   12 ParameterList: ParameterList . ',' ID ':' Type

    ')'  shift, and go to state 20
    ','  shift, and go to state 21


State 17

   14 FuncBlock: '{' . NEWLINE StatementList '}'

    NEWLINE  shift, and go to state 22


State 18

   10 FunctionDeclStmt: FuncOpen '(' ')' $@3 FuncBlock .

    $default  reduce using rule 10 (FunctionDeclStmt)


State 19

   13 ParameterList: ID ':' . Type

    INT    shift, and go to state 23
    FLOAT  shift, and go to state 24
    BOOL   shift, and go to state 25
    '&'    shift, and go to state 26

    Type  go to state 27


State 20

    8 FunctionDeclStmt: FuncOpen '(' $@1 ParameterList ')' . ARROW Type $@2 FuncBlock

    ARROW  shift, and go to state 28


State 21

   12 ParameterList: ParameterList ',' . ID ':' Type

    ID  shift, and go to state 29


State 22

   14 FuncBlock: '{' NEWLINE . StatementList '}'

    LET        shift, and go to state 30
    NEWLINE    shift, and go to state 31
    TRUE       shift, and go to state 32
    FALSE      shift, and go to state 33
    IF         shift, and go to state 34
    FOR        shift, and go to state 35
    WHILE      shift, and go to state 36
    PRINT      shift, and go to state 37
    PRINTLN    shift, and go to state 38
    ID         shift, and go to state 39
    INT_LIT    shift, and go to state 40
    FLOAT_LIT  shift, and go to state 41
    '('        shift, and go to state 42
    '{'        shift, and go to state 43
    '['        shift, and go to state 44
    '&'        shift, and go to state 45
    '"'        shift, and go to state 46
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49

    StatementList       go to state 50
    Statement           go to state 51
    CallFunction        go to state 52
    Block               go to state 53
    StartBlock          go to state 54
    DeclarationStmt     go to state 55
    AssignmentStmt      go to state 56
    IFStmt              go to state 57
    IFOpen              go to state 58
    PrintStmt           go to state 59
    WhileStmt           go to state 60
    ForStmt             go to state 61
    ExpressionStmt      go to state 62
    LogicalORExpr       go to state 63
    LogicalANDExpr      go to state 64
    ComparisonExpr      go to state 65
    AdditionExpr        go to state 66
    MultiplicationExpr  go to state 67
    UnaryExpr           go to state 68
    ArrayExpr           go to state 69
    Operand             go to state 70
    Literal             go to state 71
    unary_op            go to state 72


State 23

  120 Type: INT .

    $default  reduce using rule 120 (Type)


State 24

  121 Type: FLOAT .

    $default  reduce using rule 121 (Type)


State 25

  123 Type: BOOL .

    $default  reduce using rule 123 (Type)


State 26

  122 Type: '&' . STR

    STR  shift, and go to state 73


State 27

   13 ParameterList: ID ':' Type .
